# repo-gempa

./: .gitignore  LICENSE  README.md  cleaning.ipynb  katalog_gempa.tsv  pyproject.toml  script.py  visualization.ipynb
katalog_gempa_v2/: extract.ipynb  extractor.ipynb  fault_indo_world.geojson  katalog_sensor.tsv  main.py  pyproject.toml  scraper.py
katalog_gempa_v2/nasty/: 2008-11-11-2008-11-13.html  2008-11-15-2008-11-18.html  2008-12-02-2008-12-03.html  2008-12-09-2008-12-15.html  2008-12-27-2008-12-28.html  2009-01-09-2009-01-10.html  2009-01-28-2009-01-30.html  2009-02-04-2009-02-06.html  2009-05-11-2009-05-12.html  2009-06-02-2009-06-03.html  2009-07-03-2009-07-07.html  2009-07-24-2009-07-25.html  2009-08-23-2009-09-19.html  2010-02-03-2010-02-05.html  2011-06-15-2011-06-17.html  2011-06-22-2011-06-23.html  2011-06-29-2011-06-30.html  2013-01-07-2013-01-13.html  2013-08-03-2013-08-04.html  2013-08-05-2013-08-06.html  2013-09-06-2013-09-07.html  2014-07-20-2014-07-22.html  2016-12-27-2016-12-29.html  2018-11-25-2018-11-29.html  2018-12-01-2018-12-03.html  2018-12-06-2018-12-08.html
katalog_gempa_v2/output/: 2008-11-01T00:00:00.html  2008-11-11T00:00:00.html  2008-11-21T00:00:00.html  2008-12-01T00:00:00.html  2008-12-11T00:00:00.html  2008-12-21T00:00:00.html  2008-12-31T00:00:00.html  2009-01-10T00:00:00.html  2009-01-20T00:00:00.html  2009-01-30T00:00:00.html  2009-02-09T00:00:00.html  2009-02-19T00:00:00.html  2009-03-01T00:00:00.html  2009-03-11T00:00:00.html  2009-03-21T00:00:00.html  2009-03-31T00:00:00.html  2009-04-10T00:00:00.html  (+988 more)
raw/: 20081102.html  (+2239 more)
(+5835 files in other folders)
