[tool.poetry]
name = "repo-gempa"
version = "0.1.0"
description = ""
authors = ["Agapitus Keyka Vigiliant <kekavigi@gmail.com>"]
readme = "README.md"
packages = [{include = "repo_gempa"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.22.0"
tqdm = "^4.65.0"
requests = "^2.28.2"
selectolax = "^0.3.12"
selenium = "^4.8.3"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
